--- a/WordGame/WordGame/Base.lproj/Main.storyboard
+++ b/WordGame/WordGame/Base.lproj/Main.storyboard
@@ -9,7 +9,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-
+        <!--Words View Controller-->
+        <scene sceneID="i2T-fs-zc7">
+            <objects>
+                <viewController id="5eq-gS-wbV" customClass="WordsViewController" customModule="WordGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Uoe-FU-8lb">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="t3I-bT-SWO"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="cUD-kQ-KcU"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5Oj-Pl-Ob7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-196" y="359"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -40,9 +55,9 @@
                                 <rect key="frame" x="100" y="492" width="193" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Custom Game"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Words"/>
                                 <connections>
-                                    <segue destination="d5H-yY-9wA" kind="show" id="xwi-ED-1Mu"/>
+                                    <segue destination="5eq-gS-wbV" kind="show" id="PqH-C6-pC2"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -59,87 +74,16 @@
             </objects>
             <point key="canvasLocation" x="-1256" y="-27"/>
         </scene>
-        <!--Words View Controller-->
-        <scene sceneID="g8j-dd-Hf7">
-            <objects>
-                <viewController id="d5H-yY-9wA" customClass="WordsViewController" customModule="WordGame" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="xrH-XH-Zfk">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="khS-7q-YYo">
-                                <rect key="frame" x="0.0" y="288" width="393" height="564"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="5ZQ-dA-qec">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="43.666667938232422"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="5ZQ-dA-qec" id="pAJ-Le-Gqu">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </prototypes>
-                            </tableView>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Swedish" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fbs-D7-avB">
-                                <rect key="frame" x="148" y="91" width="97" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="English" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GSx-kK-gwB">
-                                <rect key="frame" x="148" y="142" width="97" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A5C-70-qdy">
-                                <rect key="frame" x="147" y="198" width="100" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Add Word"/>
-                                <connections>
-                                    <action selector="buttonAddWord:" destination="d5H-yY-9wA" eventType="touchUpInside" id="Pmf-vt-rG2"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iBg-8p-1td">
-                                <rect key="frame" x="110" y="256" width="174" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Start Custom Game"/>
-                                <connections>
-                                    <action selector="buttonStartCustomGame:" destination="d5H-yY-9wA" eventType="touchUpInside" id="RRw-OH-71I"/>
-                                    <segue destination="xX7-We-UAg" kind="show" identifier="showGameScreen1" id="Cy5-Av-ugl"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <viewLayoutGuide key="safeArea" id="8EP-TM-iLB"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="r0t-xr-XgV"/>
-                    <connections>
-                        <outlet property="englishInput" destination="GSx-kK-gwB" id="v2w-YB-VHF"/>
-                        <outlet property="swedishInput" destination="Fbs-D7-avB" id="IWH-jB-M2v"/>
-                        <outlet property="tebleViewWordLists" destination="khS-7q-YYo" id="rg2-RD-TjS"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Mi1-5x-yND" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2.2900763358778624" y="-580.28169014084506"/>
-        </scene>
         <!--Choose Difficulty View Controller-->
         <scene sceneID="ATw-mS-73b">
             <objects>
                 <viewController id="nFN-8J-Ict" customClass="ChooseDifficultyViewController" customModule="WordGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Qk0-Zv-lT3">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="783"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rRp-lc-44l">
-
-                                <rect key="frame" x="36.666666666666657" y="283.66666666666669" width="320" height="216"/>
-
+                                <rect key="frame" x="36.666666666666657" y="313" width="320" height="216"/>
                                 <connections>
                                     <outlet property="dataSource" destination="nFN-8J-Ict" id="0Tz-qz-Y1v"/>
                                     <outlet property="delegate" destination="nFN-8J-Ict" id="hcp-nb-oFl"/>
@@ -152,13 +96,11 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tlk-Si-jnl">
-
                                 <rect key="frame" x="142" y="626" width="109" height="106"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="109" id="TzI-9F-7ux"/>
                                     <constraint firstAttribute="height" constant="106" id="Z2v-7F-xuD"/>
                                 </constraints>
-
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Start Game" cornerStyle="capsule">
                                     <fontDescription key="titleFontDescription" name="Chalkduster" family="Chalkduster" pointSize="20"/>
@@ -168,7 +110,6 @@
                                     <segue destination="xX7-We-UAg" kind="presentation" identifier="startGameDifficulty" id="Kel-Hz-xRd"/>
                                 </connections>
                             </button>
-
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XZz-i8-sTf">
                                 <rect key="frame" x="313" y="20" width="53" height="35"/>
                                 <state key="normal" title="Button"/>
@@ -179,7 +120,6 @@
                                     <action selector="btnDisplayInfo:" destination="nFN-8J-Ict" eventType="touchUpInside" id="3Mi-qe-bYb"/>
                                 </connections>
                             </button>
-
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Gw5-4f-hU0"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
@@ -202,7 +142,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tfu-8X-gnc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="13" y="110"/>
+            <point key="canvasLocation" x="-196.18320610687022" y="-485.21126760563385"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="e2z-io-maQ">
@@ -369,9 +309,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Cy5-Av-ugl"/>
         <segue reference="X56-Me-pkK"/>
-
     </inferredMetricsTieBreakers>
     <resources>
         <systemColor name="systemBackgroundColor">
